# missy

./: .embedded_overhaul_prompt.txt  .embedded_prompt.txt  .gitignore  ARCHITECTURE.md  AUDIT_CONNECTIVITY.md  AUDIT_SECURITY.md  BUILD_RESULTS.md  BUILD_STATUS.md  CLAUDE.md  COMPLETE.md  CONFIG_REFERENCE.md  HATCHING.md  HATCHING_LOG.md  HUMANIZE_AUDIT.md  HUMANIZE_STATUS.md  HUMANIZE_TEST_PLAN.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  LAST_SESSION_SUMMARY.md  LOOP_HEALTH.md  LOOP_INSTRUCTIONS.md  MEMORY_AND_PERSISTENCE.md  OPENCLAW_GAP_ANALYSIS.md  OPENCLAW_PATTERNS.md  OPERATIONS.md  PERSONA.md  PROVIDERS.md  README.md  SECURITY.md  SKILLS_AND_PLUGINS.md  TESTING.md  TEST_EDGE_CASES.md  TEST_RESULTS.md  UPSTREAM_GAPS.md  VALIDATION_HARNESS.md  VISION.md  VISION_AUDIT.md  VISION_DEVICE_NOTES.md  VISION_TEST_PLAN.md  build_log.txt  (+9 more)
.github/: codeql-config.yml
.github/workflows/: ci.yml  release.yml  security.yml
MagicMock/mock.audit_log_path/: 128062947918912  134590253396432  135627640042704  136075323957776
docs/: README.md  THREAT_MODEL.md  architecture.md  configuration.md  discord.md  edge-node-client.md  memory-and-persistence.md  operations.md  providers.md  scheduler.md  security.md  skills-and-plugins.md  testing.md  threat-model.md  troubleshooting.md  voice-edge-spec.md
docs/implementation/: agent-loop.md  audit-events.md  discord-channel.md  manifest-schema.md  module-map.md  network-client.md  persistence-schema.md  policy-engine.md  provider-abstraction.md  scheduler-execution.md
examples/: config.yaml  discord-configs.yaml
examples/systemd/: README.md  missy-gateway.service
missy/: __init__.py
missy/agent/: __init__.py  approval.py  attention.py  behavior.py  checkpoint.py  circuit_breaker.py  code_evolution.py  compaction.py  condensers.py  consolidation.py  context.py  cost_tracker.py  done_criteria.py  failure_tracker.py  global_budget.py  hatching.py  heartbeat.py  interactive_approval.py  learnings.py  persona.py  persona_experiment.py  playbook.py  proactive.py  progress.py  prompt_patches.py  response_guards.py  runtime.py  sleeptime.py  structured_output.py  sub_agent.py  subscription.py  summarizer.py  watchdog.py
missy/api/: __init__.py  audit_browser.py  diagnostics.py  operator_controls.py  run_stream.py  server.py  web_console.py  web_sessions.py
missy/channels/: __init__.py  base.py  cli_channel.py  webhook.py
missy/cli/: __init__.py  anthropic_auth.py  main.py  oauth.py  wizard.py
missy/config/: __init__.py  hotreload.py  migrate.py  plan.py  settings.py
missy/core/: __init__.py  bus_topics.py  events.py  exceptions.py  message_bus.py  session.py
missy/gateway/: __init__.py  client.py  pinned_transport.py
missy/mcp/: __init__.py  annotations.py  client.py  digest.py  manager.py  tool_wrapper.py
missy/memory/: __init__.py  graph_store.py  resilient.py  semantic_index.py  sqlite_store.py  store.py  synthesizer.py  vector_store.py
missy/mesh/: __init__.py  crdt.py  envelope.py  identity.py  node.py  peer_registry.py  quorum.py  transport.py
missy/observability/: __init__.py  audit_export.py  audit_logger.py  otel.py
missy/planning/: __init__.py  compiler.py  conditions.py  executor.py  plan.py
missy/plugins/: __init__.py  base.py  loader.py
missy/policy/: __init__.py  engine.py  filesystem.py  network.py  presets.py  rest_policy.py  shell.py  tool_policy_pipeline.py
missy/providers/: __init__.py  acp_bridge.mjs  acpx_provider.py  anthropic_provider.py  base.py  codex_provider.py  health.py  ollama_provider.py  openai_provider.py  policy_http.py  rate_limiter.py  registry.py  round_robin.py  schema_adapter.py
missy/retrieval/: __init__.py  chunking.py  embedder.py  engine.py  hybrid_index.py
missy/scheduler/: __init__.py  jobs.py  manager.py  parser.py
missy/security/: __init__.py  censor.py  container.py  drift.py  identity.py  landlock.py  sandbox.py  sanitizer.py  scanner.py  secrets.py  trust.py  vault.py
tests/: discord_live_test.py
(+830 files in other folders)
