[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missy"
version = "0.1.0"
description = "A policy-enforced AI agent framework"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "anthropic>=0.25",
    "openai>=1.25",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.6",
    "rich>=13.7",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
missy = "missy.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["missy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["missy"]

[tool.coverage.run]
source = ["missy"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
