[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "missy"
version = "0.1.0"
description = "A policy-enforced AI agent framework"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "anthropic>=0.25",
    "openai>=1.25",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.6",
    "rich>=13.7",
    "cryptography>=42.0",
    "python-dotenv>=1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "watchdog>=4.0",
    "hypothesis>=6.100",
]
otel = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
# Note: Piper TTS is used as an external binary (not a Python package) and is
# therefore not listed here. Install it separately from https://github.com/rhasspy/piper.
voice = [
    "faster-whisper>=1.0",
    "numpy>=1.24",
    "soundfile>=0.12",
]
# Discord voice transport/session. Requires system ffmpeg installed.
discord_voice = [
    "discord.py[voice]>=2.3.0",
    "discord-ext-voice-recv @ git+https://github.com/rdphillips7/discord-ext-voice-recv.git@main",
]
vector = [
    "faiss-cpu>=1.7",
]
vision = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]
# Browser automation (Firefox via Playwright) and GTK/X11 accessibility tools.
# After installing playwright, run: playwright install firefox
desktop = [
    "playwright>=1.40",
    # pyatspi is a system package, not on PyPI.
    # Install separately: sudo apt install python3-pyatspi
]

[project.scripts]
missy = "missy.cli.main:cli"

[tool.setuptools.package-data]
missy = ["py.typed", "channels/screencast/web/*.html"]

[tool.setuptools.packages.find]
where = ["."]
include = ["missy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["missy"]

[tool.coverage.run]
source = ["missy"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
